--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,23 +64,23 @@ jobs:
           command: npm run test:lint -- --quiet --output-file test-results/eslint/results.xml --format junit
       - store_test_results:
           path: test-results
-  unit:
-    <<: *defaults
-    environment:
-      JEST_JUNIT_OUTPUT_NAME: results.xml
-    steps:
-      - *restore_git_cache
-      - checkout
-      - *restore_npm_cache
-      - run:
-          name: Unit
-          environment:
-              JEST_JUNIT_OUTPUT_DIR: test-results/unit
-          command: npm run test:unit -- --reporters="default" --reporters="jest-junit" --coverage --coverageReporters=text --coverageReporters=lcov
-      - store_artifacts:
-          path: coverage
-      - store_test_results:
-          path: test-results
+#   unit:
+#     <<: *defaults
+#     environment:
+#       JEST_JUNIT_OUTPUT_NAME: results.xml
+#     steps:
+#       - *restore_git_cache
+#       - checkout
+#       - *restore_npm_cache
+#       - run:
+#           name: Unit
+#           environment:
+#               JEST_JUNIT_OUTPUT_DIR: test-results/unit
+#           command: npm run test:unit -- --reporters="default" --reporters="jest-junit" --coverage --coverageReporters=text --coverageReporters=lcov
+#       - store_artifacts:
+#           path: coverage
+#       - store_test_results:
+#           path: test-results
   build:
     <<: *defaults
     environment:
