--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,25 +107,25 @@ jobs:
       - *restore_dist_cache
       - store_artifacts:
           path: dist
-  integration:
-    <<: *defaults
-    parallelism: 2
-    environment:
-      JEST_JUNIT_OUTPUT_NAME: results.txt
-    steps:
-      - *restore_git_cache
-      - checkout
-      - *restore_npm_cache
-      - *restore_build_cache
-      - run:
-          name: Integration
-          environment:
-              JEST_JUNIT_OUTPUT_DIR: test-results/integration
-          command: |
-            export TESTFILES=$(circleci tests glob "test/integration/*.test.js" | circleci tests split --split-by=timings)
-            $(npm bin)/jest ${TESTFILES} --reporters="default" --reporters="jest-junit"
-      - store_test_results:
-          path: test-results
+#   integration:
+#     <<: *defaults
+#     parallelism: 2
+#     environment:
+#       JEST_JUNIT_OUTPUT_NAME: results.txt
+#     steps:
+#       - *restore_git_cache
+#       - checkout
+#       - *restore_npm_cache
+#       - *restore_build_cache
+#       - run:
+#           name: Integration
+#           environment:
+#               JEST_JUNIT_OUTPUT_DIR: test-results/integration
+#           command: |
+#             export TESTFILES=$(circleci tests glob "test/integration/*.test.js" | circleci tests split --split-by=timings)
+#             $(npm bin)/jest ${TESTFILES} --reporters="default" --reporters="jest-junit"
+#       - store_test_results:
+#           path: test-results
 
   deploy-npm:
     <<: *defaults
