--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "scratch-blocks": "0.1.0-prerelease.20201223034356",
     "scratch-l10n": "3.10.20201226031447",
     "scratch-storage": "1.3.3",
+    "scratch-paint": "0.2.0-prerelease.20201020103914",
     "scratch-svg-renderer": "0.2.0-prerelease.20200610220938",
     "scratch-vm": "github:frank-782/scratch-vm#develop",
     "selenium-webdriver": "3.6.0",
